[3.1.x] Fixed #32069 -- Fixed admin change-form layout on small screens.
Restored flex-wrap CSS declaration to form elements at smallest breakpoint.
This was present since the responsive admin was introduced in dc37e8846eeedc3a9100ca21fdc9d579bc534c89.
Regression in 8ee4bb6ffcb3346c0fa8fb194986fbf9edadc822, where it was accidentally removed.

Backport of 257f8495d6c93e30ab0f52af4c488d7344bcf112 from master

--- a/django/contrib/admin/static/admin/css/responsive.css
+++ b/django/contrib/admin/static/admin/css/responsive.css
@@ -558,6 +558,7 @@ input[type="submit"], button {
     .aligned .form-row,
     .aligned .form-row > div {
         display: flex;
+        flex-wrap: wrap;
         max-width: 100vw;
     }
 
